
3.0.2

  * Requesters by default no longer remove non-matching entries as you
    enter characters. Use Insert or Delete keys to toggle between the
    new and old behavior.

  * "SetBookmark ?" and "GotoBookmark ?" now prompt for the bookmark you
    want to set/goto. The prompt also indicates which bookmarks are set.

3.0  2015-06-18

  * ne is now fully 64-bit, and needs to be compiled by a C99-compliant
    compiler. Files can be of any size, provided that enough core memory
    is available.

  * ne is able to read from named pipes. You can even pipe content into
    ne: it will be opened as the first document.

  * It is now possible to interrupt searches (it used to be possible just
    to interrupt global replace actions).

  * Word wrap has been reverted to pre-2.5: it preserves just whitespace,
    and it doesn't reparagraph at each line split or join. Paragraph keeps
    the usual smart features preserving comments, etc.

2.6  2015-04-17

  * Requesters (filenames, help, autocompletions, etc.) do progressive
    "fuzzy match" by typed characters, backspace.

  * Document requester (F4) opens with cursor on the current document.
    Docs with unsaved changes are bold, flagged with "*". F2/F3 reorder
    documents.

  * Tab in Syntax command displays requester of extant syntax recognizers.

  * You can now use AutoComplete in command line prompts.

  * New SaveAll command saves all modified documents.

  * Warns before saving over a file that was modified since the buffer was
    last loaded or saved.

  * `' joins (), {}, [], and <> as character pairs known to MatchBracket.

  * New example macros: aspell, DeleteSOL.

  * Add % to special leading characters for re-wrapping Paragraphs.

  * WordWrap no longer waits for the cursor to hit the right margin; it wraps
    on insertions and deletions now.

  * Updates to ruby, erb, python, conf, many other syntax recognizers.
    Added these recognizers from the Joe project: ant batch