@@ -81,7 +81,7 @@ enum error {
 	/* 35 */ MARK_OUT_OF_BUFFER,
 	/* 36 */ CANT_OPEN_MACRO,
 	/* 37 */ MAX_MACRO_DEPTH_EXCEEDED,
-	/* 38 */ FILE_IS_READ_ONLY,
+	/* 38 */ DOCUMENT_IS_READ_ONLY,
 	/* 39 */ FILE_IS_MIGRATED,
 	/* 40 */ FILE_IS_DIRECTORY,
 	/* 41 */ FILE_IS_TOO_LARGE,
